[package]
name = "silkworm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4.2"
anyhow = "1.0.66"
beanstalkc = "1.0.0"
beanstalkd = "0.4.1"
bincode = "1.3.3"
itertools = "0.10.5"
serde = { version = "1.0.147", features = ["derive"] }
